--- a/css/testing-grounds/flexbox.html
+++ b/css/testing-grounds/flexbox.html
@@ -8,10 +8,13 @@
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="flexbox.css">
+  <link rel="stylesheet" href="fade_on_scroll/fade_on_scroll.css">
 
 </head>
 
 <body>
+
+  <section class="hero"></section>
 
   <div id="screen-width">
     <h1>Screen Width: <span></span>px</h1>
@@ -21,7 +24,7 @@
 
     <div class="centered">
 
-      <section class="cards">
+      <section class="cards fade-up-3">
 
         <article class="card">
 
@@ -176,6 +179,7 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="fade_on_scroll/fade_on_scroll.js"></script>
 
   <script>
     (function($) {
